Rename project to lunar.
