# internal/api/handlers.go
@@ -8,17 +8,17 @@ import (
 	"strconv"
 	"time"
 
-	"github.com/dimiro1/faas-go/internal/ai"
-	"github.com/dimiro1/faas-go/internal/diff"
-	"github.com/dimiro1/faas-go/internal/email"
-	"github.com/dimiro1/faas-go/internal/env"
-	"github.com/dimiro1/faas-go/internal/events"
-	internalhttp "github.com/dimiro1/faas-go/internal/http"
-	"github.com/dimiro1/faas-go/internal/kv"
-	"github.com/dimiro1/faas-go/internal/logger"
-	"github.com/dimiro1/faas-go/internal/masking"
-	"github.com/dimiro1/faas-go/internal/runner"
-	"github.com/dimiro1/faas-go/internal/store"
+	"github.com/dimiro1/lunar/internal/ai"
+	"github.com/dimiro1/lunar/internal/diff"
+	"github.com/dimiro1/lunar/internal/email"
+	"github.com/dimiro1/lunar/internal/env"
+	"github.com/dimiro1/lunar/internal/events"
+	internalhttp "github.com/dimiro1/lunar/internal/http"
+	"github.com/dimiro1/lunar/internal/kv"
+	"github.com/dimiro1/lunar/internal/logger"
+	"github.com/dimiro1/lunar/internal/masking"
+	"github.com/dimiro1/lunar/internal/runner"
+	"github.com/dimiro1/lunar/internal/store"
 	"github.com/rs/xid"
 )
 
